# trackex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: audio.rs  config.rs  error.rs  lib.rs  main.rs
src/format/: flac.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
