[package]
name = "trackex"
version = "0.1.0"
edition = "2021"
description = "Extract audio tracks from video files and convert to various formats"
license = "MIT"
repository = "https://github.com/ahaoboy/trackex"
homepage = "https://github.com/ahaoboy/trackex"
authors = ["ahaoboy"]

[features]
default = ["cli", "wav", "mp3", "ogg", "flac", "serde"]
wav = ["dep:hound"]
mp3 = ["dep:oxiaudio"]
ogg = ["dep:vorbis-encoder"]
flac = ["dep:oxideav-flac", "dep:oxideav-core"]
cli = ["dep:clap"]
serde = ["dep:serde"]

[dependencies]
symphonia = { version = "0.6", features = ["all"] }
hound = { version = "3", optional = true }
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
oxiaudio = { version = "0.1", features = ["mp3-encode-lame"], optional = true }
vorbis-encoder = { version = "0.1", optional = true }
oxideav-flac = { version = "0.0", optional = true }
oxideav-core = { version = "0.1", optional = true }
